# crypto-collection

./: .gitignore  Pipfile  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt
crypto/: asgi.py  settings.py  urls.py  views.py
crypto/apps/blog/: apps.py  posts.py  urls.py  views.py
crypto/apps/chat/: apps.py  consumers.py  views.py
crypto/apps/hamming/: apps.py  models.py  tests.py  urls.py  views.py
crypto/apps/hamming/migrations/: 0001_initial.py
crypto/apps/hamming/services/: hamming_code_service.py  hamming_service.py
crypto/apps/hamming/tests/: test_hamming_code_service.py  test_hamming_service.py
crypto/apps/hamming_code/: apps.py  services.py  tests.py  urls.py  views.py
crypto/apps/luhn_algorithm/: apps.py  forms.py  models.py  service.py  tests.py  urls.py  views.py
crypto/apps/password_cracking/: apps.py  forms.py  services.py  tests.py  urls.py  views.py
static/css/: custom.css
static/js/: form.js  hooks.js  partial.js
static/plugins/theme/: style.css
templates/: about.html  base.html  home.html
templates/base/: base.html  blog-post.html  footer.html  header.html  main.html  navbar.html  navigation.html  post.html
templates/hamming/: decoded.html  encoded.html  index.html
templates/luhn_algorithm/: check_result.html  index.html
templates/posts/2021-07-10/: hamming_code.html
templates/posts/2021-07-12/: luhn_algorithm.html
templates/posts/2021-07-14/: brute_force_attack.html  password_cracking.html
templates/posts/2021-07-17/: dictionary_attack.html
templates/posts/2021-08-21/: hiding_in_strings.html
(+33 files in other folders)
