[tool.poetry]
name = "crypto-collection"
version = "0.1.0"
description = "A collection of projects closely related to cryptography"
authors = ["Mensch272 <47662901+mensch272@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.8"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
whitenoise = "^5.3.0"
django-widget-tweaks = "^1.4.8"
channels = "^3.0.4"
rstr = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
